--- a/.env.testing
+++ b/.env.testing
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=testing
-APP_KEY=base64:cPs2+Nqp90+bJOb7iV2K1boERwZjXqxa5k5hxUvgbno=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,8 +11,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=testing-laravel
-DB_USERNAME=admin
-DB_PASSWORD=admin@123
+DB_USERNAME=root
+DB_PASSWORD= 
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
